[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-prompt-kit"
version = "0.1.0"
description = "A local command-line toolkit for saving, tagging, searching, and reusing AI prompts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AI Prompt Kit contributors" }
]
keywords = ["ai", "prompts", "cli", "productivity"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[project.scripts]
ai-prompt-kit = "aipromptkit.cli:main"

[tool.setuptools]
packages = ["aipromptkit"]
